--- a/style.css
+++ b/style.css
@@ -38,3 +38,9 @@ section {
     background-repeat: no-repeat;
 
 }
+
+.Big-dream {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
