--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0px;
+
+
+
 }
 
 h1 {
     font-size: 50px;
+}
+
+h2 {
+    font-size: 40px;
 }
 
 .orange {
@@ -18,6 +25,7 @@ h1 {
 .d1 {
     width: 50%;
     padding-left: 40px;
+
 }
 
 .d1 img {
@@ -43,4 +51,41 @@ h1 {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.Experience {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    margin-bottom: 90px;
+
+}
+
+.d2 {
+    box-shadow: 10px 10px 40px gray;
+    width: 40%;
+    margin-left: 5%;
+    margin-left: 5%;
+    padding-left: 20px;
+    padding-bottom: 0px;
+    border-radius: 10px;
+
+
+
+
+
+}
+
+#i1 {
+    border-left: 7px solid tomato;
+
+}
+
+#i2 {
+    border-left: 7px solid blue;
+
+}
+
+footer p {
+    text-align: center;
 }
